# post-effects-plugin

./: README.md
GamePlugin/lib/: MCore.lib  MEngine.lib
GamePlugin/src/: CMakeLists.txt  Game.cpp  Game.h  GamePlugin.cpp  GamePlugin.h  PostProcessor.cpp  PostProcessor.h  Shader.cpp  Shader.h  main.cpp
levels/: main.level
scripts/: main.lua
shaders/: pfx.frag  pfx.vert
