cmake_minimum_required(VERSION 2.6)
project(Plugin)
file(GLOB all_SRC "*.h" "*.cpp")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../..)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../..)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../..)
if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
include_directories(${CMAKE_BINARY_DIR}/../Includes)
endif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
include_directories(${CMAKE_BINARY_DIR}/../Includes)
link_directories(${CMAKE_BINARY_DIR}/../lib)
foreach( OUTPUTCONFIG ${CMAKE_CONFIGURATION_TYPES} ) 
string( TOUPPER ${OUTPUTCONFIG} OUTPUTCONFIG )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/../..)
set( CMAKE_LIBRARY_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/../..)
set( CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${OUTPUTCONFIG} ${CMAKE_BINARY_DIR}/../..)
endforeach( OUTPUTCONFIG CMAKE_CONFIGURATION_TYPES )
endif(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
add_library(Game SHARED ${all_SRC})
set_target_properties(Game PROPERTIES PREFIX "")
